--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
 
     <section id="#about">
-      <h1>Cupcake de café com chantilly</h1>
+      <h1>Cupcake dfe café com chantilly</h1>
       <p>o bolinho perfeito para acompanhar o café de todos os dias. é muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou! </p>
 
       <p>Tempo: 1h10 <br>
