--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina de Receita</title>
+<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   
 <div> 
-  <img src=""/>
+  <img src="./assets/cupcake.jpg"/>
   <main>
 
     <section id="#about">
-      <h1>Cupcake dfe café com chantilly</h1>
+      <h1>Cupcake de Café com Chantilly</h1>
       <p>o bolinho perfeito para acompanhar o café de todos os dias. é muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou! </p>
 
       <p>Tempo: 1h10 <br>
         Rendimento: 12 porções <br>
          Dificuldade: fácil     </p>
+         
     </section>
     <section id="ingredients">
       <h2>Ingredientes</h2>
