--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina de Receita</title>
@@ -14,7 +17,7 @@
 
     <section id="about">
       <h1>Cupcake de Café com Chantilly</h1>
-      <p>o bolinho perfeito para acompanhar o café de todos os dias. é muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou! </p>
+      <p>O bolinho perfeito para acompanhar o café de todos os dias. é muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou! </p>
 
       <p>Tempo: 1h10 <br>
         Rendimento: 12 porções <br>
