--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
@@ -55,7 +55,8 @@
     </section>
     
   </main>
+ 
 </div>
-
+ <footer> Criado por Chrystopher Kopesk</footer>
 </body>
 </html>
